feat(security): catálogo de permissões legível — classificação, rótulo e dependências
A tela de permissões confundia quem administra por três razões que se somavam, e
todas eram ausência de dado, não escolha da interface.

1. TELA E ENDPOINT MISTURADOS. ResourceEntity.type (VIEW|API) existe e é gravado
   pelos dois coletores desde sempre, mas nenhum DTO o enviava. Agora vai, junto
   com o nome estável do recurso e da ação — a tela só recebia `description`, que
   é texto humano, passa por tradução no cliente e é gerado em massa pelo
   frontend ("Criar X", "Editar X"), de modo que centenas de linhas ficavam
   indistinguíveis.

   Junto: dois defeitos que a ausência de teste escondia no ResourcePersistence-
   Adapter. A identidade do recurso era transportada concatenando id + ":" +
   descrição e desfeita com split(":") — descrição com ":" voltava truncada e
   descrição VAZIA estourava IndexOutOfBounds, transformando a tela num 500. E a
   origem da concessão era lida do Tuple por POSIÇÃO, o que quebraria em silêncio
   ao acrescentar coluna.

2. UM CAMPO FAZENDO TRÊS TRABALHOS. DESCRICAO identificava, explicava e — via
   "->" que o cliente quebra na exibição — agrupava. Agora são três colunas:
   ROTULO (nova), DESCRICAO e CATEGORIA (existia e nunca fora preenchida).

   Rótulo nulo significa "use a descrição": sem reescrita em massa, a tela mostra
   exatamente o que mostra hoje até alguém declarar um rótulo. Para reescrever um
   catálogo já existente a partir do código existe sync.mode=refresh — usado uma
   vez, de propósito, barulhento no log, e que NUNCA toca no minimumLevel, o
   único dos quatro campos semeados que muda uma decisão de acesso.

3. DEPENDÊNCIAS INVISÍVEIS. Conceder aprovar_custo sem view produz alguém que
   passa na autorização do endpoint e não chega até ele pela interface — e nada
   aparece errado em lugar nenhum. Nova entidade ActionDependencyEntity registra
   arestas "a origem não serve para nada sem o alvo", declaradas em
   @Has